--- a/antora.yml
+++ b/antora.yml
@@ -1,4 +1,4 @@
-name: galazie-antora-demo 
+name: galaxie-antora-demo 
 title: CURIOSITÉS JUDICIAIRES ET HISTORIQUES MOYEN ÂGE. PROCÈS CONTRE LES ANIMAUX
 version: '1.0' 
 nav: 
